syntax = "proto3";
package alfred.user_profile.v1.internal;

option go_package = "pb/";

import "google/protobuf/empty.proto";
import "google/api/annotation.proto";
import "include/graphql.proto";
import "google/protobuf/timestamp.proto";
import "types/enums.proto";

service UserProfileInternal {
    rpc CreateUserProfile(CreateUserProfileRequest) returns (UserProfile);

    rpc UpdateUserProfile(UpdateUserProfileRequest) returns (UserProfile);

    rpc DeleteUserProfile(DeleteUserProfileRequest) returns (google.protobuf.Empty);

    rpc GetUserMe (google.protobuf.Empty) returns (UserProfile);
}

message CreateUserProfileRequest {
    UserProfile user_profile = 1;
}

message DeleteUserProfileRequest {
    string id = 1;
}

message UpdateUserProfileRequest {
    UserProfile user_profile = 1;
}

message GetUserProfileBySubRequest{
    string sub = 1;
}
message UserProfile {
    //generated by uuid
    string id = 1;
    // external unique_id
    string sub = 2;
    // name of the user
    string name = 3;
    // a username provided by external application
    string user_name = 4;
    //email of user
    string email = 5;
    // phone of user
    string phone_number = 6;
    types.VCSProviders external_source = 7;
    string profile_pic_url = 8;
    google.protobuf.Timestamp token_valid_till = 9;
}

